--- a/CSS_L1/ExternalCSS.html
+++ b/CSS_L1/ExternalCSS.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="./style.css" />    <!-- External CSS applied here to make BGcolor = Green -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MERN</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Hello!! This is the beginning of my MERN Stack Journey.</h1>
-    Bishwanath Paul <BR>
-    Date : 10/07/2024
+    
 </body>
 </html>
-
 
